Add scoring flow
